# indexed

./: .coderabbit.yaml  .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_AUDIT_REPORT.md  DEVELOPMENT.md  Dockerfile  ENGINE_PARITY_CAPTURE.md  IMPLEMENTATION_GUIDE.md  LICENSE  MIGRATION.md  NEXT_STEPS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_STATUS.md  README.md  VERSIONING_STRATEGY.md  benchmark-results.json  codecov.yml  docker-compose.yml  fastmcp.json  fastmcp_server.py  indexed.toml  indexed.toml.bak  prd.md  pyproject.toml  pyproject.toml.backup  skills-lock.json
.agents/skills/: index-update  index-use
.benchmarks/: .gitignore  benchmark_baseline.py  benchmark_compare.py
.benchmarks/baselines/: building.json  building_runnervmh13bl.json
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: hooks.json  suggest-mcp.sh
.claude/skills/: index-create
.cursor/: main-agent.md  main-rule.mdc  mcp.example.json  mcp.json
.cursor/commands/: commit.md
.cursor/rules/: core.mdc  environment.mdc  main-agent.md  main-agent.mdc  main-rule.md  main-rule.mdc  orchestration.mdc  plan-mode.mdc  product-context.mdc  product-requirements.mdc  tech-architecture.mdc  tech-performance.mdc  uv.mdc
.github/workflows/: copilot-setup-steps.yml  python-benchmark.yml  python-ci.yml  python-cov.yml  python-package.yml  python-release-ci.yml
.indexed/: config.toml
.memory/: README.md  api_reference.md  app_cli.md  architecture.md  architecture_decisions.md  brief.md  cli_final_design.md  cli_finalization_plan.md  cli_flow_rethink.md  cli_rewrite_complete.md  config_api.md  config_system_summary.md  design_system.md  feature_interactive_spinner_logging.md  llama_index_integration.md  migration_status.md  package_core.md  phase2_implementation_plan.md  phase2_standardization_prd.md  refactoring_logging_status.md  session_summary.md  task_plan.md  task_prd.md  task_subtasks.md  tech.md
.prd/: IMPLEMENTATION_ROADMAP.md  MIGRATION_IMPLEMENTATION_PLAN.md  README.md  architecture.md  prd.md  tech.md  uv-monorepo-guide.md
.prd/apps/: cli.md
.spec/: cleanup.md  design.md  feature-config-product.md  feature-config-tech.md  lessons.md  phase2-wire-v2.md  plan.md  product.md  tech-app.md  tech-config.md  tech-connectors.md  tech-core.md  tech-parsing.md  tech.md
apps/indexed/: AGENTS.md  CLAUDE.md  README.md  hatch_build.py  pyproject.toml
apps/indexed/.cursor/rules/: components.mdc  context.mdc  design_doc.mdc  design_system.mdc
apps/indexed/src/indexed/: app.py  debug.py  errors.py  init.py
apps/indexed/src/indexed/config/: cli.py
apps/indexed/src/indexed/connectors/: __init__.py
apps/indexed/src/indexed/info/: __init__.py  cli.py
apps/indexed/src/indexed/knowledge/: __init__.py  cli.py
apps/indexed/src/indexed/knowledge/commands/: __init__.py  _create_helpers.py  create.py  inspect.py  remove.py  search.py  update.py
apps/indexed/src/indexed/mcp/: __init__.py  cli.py  config.py  formatting.py  resources.py  server.py  tools.py
apps/indexed/src/indexed/services/: __init__.py  engine_dispatch.py  engine_router.py
apps/indexed/src/indexed/utils/: __init__.py  conflict_prompt.py  console.py  context_managers.py  credentials.py  files_source_display.py  format.py  logging.py  migration.py  progress_bar.py  simple_output.py  storage_info.py
apps/indexed/src/indexed/utils/components/: info_row.py  key_value_panel.py  status.py  summary.py  theme.py
docs/: README.md  architecture-internals.md  cli-implementation.md  index.md
docs/developer/: architecture.mdx  cli-design.mdx  (+4 more)
indexed/: README.md  pyproject.toml
indexed-cli/: pyproject.toml
indexed/.cursor/rules/: components.mdc  context.mdc  design_doc.mdc  design_system.mdc
indexed/src/cli/: app.py  mcp.py
indexed/src/cli/commands/: mcp.py
indexed/src/cli/commands/legacy/: config.py  update.py
indexed/src/cli/components/: theme.py
indexed/src/cli/formatters/: update_formatter.py
indexed/src/cli/utils/: config_format.py  logging.py
indexed/src/indexed/: app.py  mcp_cli.py
indexed/src/indexed/commands/: config.py
indexed/src/indexed/commands/knowledge/: inspect.py  remove.py  search.py  update.py
indexed/src/indexed/components/: info_row.py  status.py  summary.py
indexed/src/indexed/config/: __init__.py  cli.py
indexed/src/indexed/connectors/: __init__.py
indexed/src/indexed/formatters/: delete_formatter.py  inspect_formatter.py  search_formatter.py  update_formatter.py
indexed/src/indexed/info/: __init__.py  cli.py
indexed/src/indexed/knowledge/: __init__.py  cli.py
indexed/src/indexed/knowledge/commands/: __init__.py  _create_helpers.py  create.py  inspect.py  remove.py  search.py  update.py
indexed/src/indexed/knowledge/formatters/: __init__.py  delete_formatter.py  inspect_formatter.py  search_formatter.py  update_formatter.py
indexed/src/indexed/mcp/: __init__.py  cli.py  server.py
indexed/src/indexed/utils/: __init__.py  banner.py  config_format.py  conflict_prompt.py  console.py  context_managers.py  credentials.py  format.py  logging.py  migration.py  output_mode.py  progress_bar.py  rich_console.py  storage_info.py
indexed/src/indexed/utils/components/: __init__.py  alerts.py  cards.py  info_row.py  key_value_panel.py  status.py  summary.py  theme.py
scripts/: benchmark_compare.py
test-docs/: test-file.md
tests/: conftest.py  pytest.ini
tools/: sync_version.py  validate_wheel.py
(+309 files in other folders)
