[project]
name = "indexed"
version = "0.1.0"
description = "Multi-mode application: CLI, MCP server, and web server for indexed document search"
readme = "README.md"
authors = [
    { name = "Lennard Zündorf", email = "l.p.zuendorf@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "indexed-core",
    "indexed-utils",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "mcp>=1.13.0",
    "fastmcp>=2.11.3",
]

[project.scripts]
indexed = "cli.app:app"
indexed-mcp = "cli.commands.legacy.mcp:main"

[tool.uv.sources]
indexed-core = { workspace = true }
indexed-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
