[project]
name = "indexed"
version = "0.1.0"
description = "CLI and MCP server for semantic document search with AI agent integration"
readme = "README.md"
authors = [
    { name = "Lennard Zündorf", email = "lennard@zuendorf.me" }
]
requires-python = ">=3.10"
dependencies = [
    "indexed-core",
    "indexed-utils",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "mcp>=1.13.0",
    "fastmcp>=2.11.3",
    "art>=6.0",
]

[project.scripts]
indexed = "cli.app:main"
indexed-mcp = "cli.mcp:main"

[tool.uv.sources]
indexed-core = { workspace = true }
indexed-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]
