[project]
name = "indexed"
version = "0.1.3"
description = "CLI and MCP server for semantic document search with AI agent integration"
readme = "README.md"
authors = [
    { name = "Lennard Zündorf", email = "lennard@zuendorf.me" }
]
requires-python = ">=3.11"
dependencies = [
    "indexed-core",
    "indexed-connectors",
    "indexed-parsing",
    "indexed-utils",
    "indexed-config",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "mcp>=1.13.0",
    "fastmcp>=2.13.0",
    "art>=6.0",
]
dynamic = ["una"]

[project.scripts]
indexed = "indexed.app:main"
indexed-mcp = "indexed.mcp.cli:cli_main"

[tool.uv.sources]
indexed-core = { workspace = true }
indexed-connectors = { workspace = true }
indexed-parsing = { workspace = true }
indexed-utils = { workspace = true }
indexed-config = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-una"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.una-build]

[tool.hatch.build.hooks.custom]

[tool.hatch.metadata.hooks.una-meta]

[tool.hatch.build.targets.wheel]
packages = ["src/indexed"]
