[project]
name = "indexed-sh"
version = "0.0.4"
description = "CLI and MCP server for semantic document search with AI agent integration"
readme = "README.md"
license = { text = "See LICENSE file" }
authors = [
    { name = "Lennard Zündorf", email = "lennard@zuendorf.me" }
]
keywords = ["semantic-search", "mcp", "rag", "faiss", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "License :: Other/Proprietary License"
]
requires-python = ">=3.11"
dependencies = [
    "indexed-core",
    "indexed-connectors",
    "indexed-parsing",
    "indexed-utils",
    "indexed-config",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "mcp>=1.13.0",
    "fastmcp>=3.2.4,<4",
    "art>=6.0",
]
dynamic = ["una"]

[project.urls]
Homepage = "https://indexed.sh"
Repository = "https://github.com/LennardZuendorf/indexed"
"Issue Tracker" = "https://github.com/LennardZuendorf/indexed/issues"

[project.scripts]
indexed = "indexed.app:main"
indexed-mcp = "indexed.mcp.cli:cli_main"

[tool.uv.sources]
indexed-core = { workspace = true }
indexed-connectors = { workspace = true }
indexed-parsing = { workspace = true }
indexed-utils = { workspace = true }
indexed-config = { workspace = true }

[build-system]
requires = ["hatchling", "hatch-una"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.una-build]

[tool.hatch.build.hooks.custom]

[tool.hatch.metadata.hooks.una-meta]

[tool.hatch.build.targets.wheel]
packages = ["src/indexed"]
